--- a/estilo.css
+++ b/estilo.css
@@ -70,6 +70,7 @@ padding: 20px;
 .headline{
     flex: 40%;
     margin-left: 10% ;
+    color: #e35e1b;
   }
 
 .headline h2{
@@ -81,10 +82,7 @@ padding: 20px;
     margin: 0;
 
 }
-.headline p{
-    color: rgb(250, 95, 11);
-    text-align: left;
-}
+
 
 .contact-btn{
     
@@ -108,6 +106,83 @@ padding: 20px;
     flex: 40%;
     text-align:center ;
 }
+
+
+.slider{
+    margin: 0 auto;
+    width: 700px;
+    height:400px;
+    overflow: hidden;
+    margin-top: 20px;
+}
+.slides{
+    width: 400%;
+    height: 400px;
+    display: flex;
+    margin-left: 20px;
+}
+.slides input{
+    display: none;
+}
+
+.slide {
+    width: 25%;
+    position: relative;
+}
+.slides img{
+    width: 400px;
+    height: 300px;
+}
+
+.manual-navigation{
+    position: absolute;
+    width: 600px;
+    margin-top: -60px;
+    display: flex;
+    justify-content: center;
+}
+.manual-btn{
+    border: 2px solid white;
+    padding: 5px;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: 1s;
+}
+
+.manual-btn:not(:last-child){
+    margin-right: 40px;
+}
+.manual-btn:hover{
+    background: white;
+}
+
+#radio1:checked ~ .first{
+    margin-left: 0;
+}
+#radio2:checked ~ .first{
+    margin-left: -26%;
+}
+#radio3:checked ~ .first{
+    margin-left: -55%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 section{
     display: inline-block;
@@ -164,9 +239,9 @@ display: none;
 footer{
     margin-top: 100px;
     height: 400px;
- background-image: linear-gradient(180deg,#180F4A,#090422,black);
+ background-image: linear-gradient(190deg,#0a0a0a,#f0730d,black);
  text-align:center ;
- border-top: 5px solid #ff2978
+ border-top: 5px solid #fd6c0b
 
 }
 .logo-rodape{
