--- a/estilo.css
+++ b/estilo.css
@@ -33,6 +33,12 @@ body{
     font-size: 34px ;
     font-family:"Lobster", sans-serif ;
 }
+#para{
+    color: #e35e1b;
+    font-family:"Lobster", sans-serif ;
+    text-align: center;
+    font-size: 20px;
+}
 
 .menu{
  flex: 70%; 
@@ -114,12 +120,19 @@ padding: 20px;
     height:400px;
     overflow: hidden;
     margin-top: 20px;
+    flex: 40%;
+    
+    position: relative;
+
 }
 .slides{
     width: 400%;
     height: 400px;
     display: flex;
     margin-left: 20px;
+    display: flex;
+
+    
 }
 .slides input{
     display: none;
@@ -132,6 +145,8 @@ padding: 20px;
 .slides img{
     width: 400px;
     height: 300px;
+    
+    
 }
 
 .manual-navigation{
